--- a/client/html/index.html
+++ b/client/html/index.html
@@ -22,12 +22,24 @@
           <h2>Already A Member?</h2>
           <a href="login.html"><button style="width: 100%">Login</button></a>
         </div>
-        <div style="display: flex; flex-direction: column">
+        <div class="register-div" style="display: flex; flex-direction: column">
           <h2>Not A Member yet?</h2>
           <a href="register.html"
             ><button style="width: 100%">Register</button></a
           >
         </div>
+      </div>
+      <div
+        class="todo-div"
+        style="
+          display: flex;
+          flex-direction: column;
+          align-items: center;
+          padding-top: 2rem;
+        "
+      >
+        <h2>My Todos!</h2>
+        <a href="todos.html"><button style="width: 200px">Todos</button></a>
       </div>
     </main>
   </body>
