--- a/client/html/login.html
+++ b/client/html/login.html
@@ -4,9 +4,46 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <script src="/client/javascript/login.js" type="module"></script>
+    <link rel="icon" href="data:;base64,=" />
     <title>Login Page</title>
+    <style>
+      * {
+        padding: 0;
+        margin: 0;
+        box-sizing: border-box;
+      }
+    </style>
   </head>
-  <body>
-    <h1>Login Page</h1>
+  <body
+    style="
+      display: flex;
+      align-items: center;
+      flex-direction: column;
+      min-height: 99vh;
+    "
+  >
+    <h1 style="padding: 3rem">Login Page</h1>
+    <form
+      class="login-form"
+      style="
+        display: flex;
+        flex-direction: column;
+        gap: 2rem;
+        border: solid black 2px;
+        padding: 2rem;
+      "
+    >
+      <div>
+        <label for="username">Username:</label>
+        <input type="text" name="username" id="username" />
+      </div>
+      <div>
+        <label for="password">Password:</label>
+        <input type="password" name="password" id="password" />
+      </div>
+      <button class="loginFormBtn">Login</button>
+    </form>
+    <h2></h2>
   </body>
 </html>
