Updates h3 variable name

--- a/client/html/login.html
+++ b/client/html/login.html
@@ -44,6 +44,6 @@
       </div>
       <button class="loginFormBtn">Login</button>
     </form>
-    <h2></h2>
+    <h3 class="h3-response"></h3>
   </body>
 </html>
