Updates login page with links 2 regi & todos

--- a/client/html/login.html
+++ b/client/html/login.html
@@ -45,5 +45,7 @@
       <button class="loginFormBtn">Login</button>
     </form>
     <h3 class="h3-response"></h3>
+    <p>Not a <a href="/client/html/register.html"> member yet</a>?</p>
+    <p>Check <a href="/client/html/todos.html"> Todos</a></p>
   </body>
 </html>
