--- a/client/html/index.html
+++ b/client/html/index.html
@@ -30,17 +30,17 @@
           >
         </div>
       </div>
-      <div
-        class="todo-div"
-        style="
-          display: flex;
-          flex-direction: column;
-          align-items: center;
-          padding-top: 2rem;
-        "
-      >
-        <h2>My Todos!</h2>
-        <a href="todos.html"><button style="width: 200px">Todos</button></a>
+      <div style="display: flex; padding-top: 2rem; gap: 5rem">
+        <div class="todo-div">
+          <h2>My Todos!</h2>
+          <a href="todos.html"><button style="width: 200px">Todos</button></a>
+        </div>
+        <div>
+          <h2>Friends page</h2>
+          <a href="/client/html/friend.html"
+            ><button style="width: 200px">Friends</button></a
+          >
+        </div>
       </div>
     </main>
   </body>
