--- a/client/html/todos.html
+++ b/client/html/todos.html
@@ -9,6 +9,7 @@
     <title>Document</title>
   </head>
   <body>
+    <a href="/client/html">Home</a>
     <h1>Todos</h1>
     <div>
       <form class="todo-form">
